--- a/FrontEnd/Recordatorios/recordatorios.css
+++ b/FrontEnd/Recordatorios/recordatorios.css
@@ -13,53 +13,28 @@ body {
   font-family: "Helvetica-Regular", Helvetica, sans-serif;
 }
 
-/* =============================== */
-/*   LAYOUT GENERAL                */
-/* =============================== */
-
 .distribucion {
   display: flex;
   height: 100vh;
   flex-direction: row;
 }
 
-/* -------- SIDEBAR -------- */
+
+/* SIDEBAR */
 .barra-lateral {
-  width: 5rem;
+  width: 7rem;
   background-color: #333;
   padding: 1.25rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5rem;
 }
 
-.icono-lateral {
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: white;
-  border-radius: 50%;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.5rem;
-  color: #333;
+.sidebar-spacer {
+  flex-grow: 1;
 }
 
-.icono-lateral.engranaje,
-.icono-lateral.atras {
-  background-color: transparent;
-  color: white;
-  font-size: 2.5rem;
-}
-
-.icono-lateral-inferior {
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: transparent;
-  color: #ff8566;
-  font-size: 2.5rem;
+.sidebar-logo {
   margin-top: auto;
 }
 
@@ -133,7 +108,6 @@ body {
   -webkit-backdrop-filter: blur(20px);
   z-index: 5000;
 
-  display: flex;
   align-items: center;
   justify-content: center;
 }
