--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.css
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.css
@@ -1,50 +1,57 @@
-body {
-    
-    font-family: Arial, sans-serif;
-} 
-
-h1{
-    text-align: center;
-        font-size: 2.5em;
-        color: #333;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-h2 {
-    font-size: 1.2em;
-    color: #000000;     
-   
+
+body {
+    font-family: "Inter", sans-serif;
+    background-color: white;
+}
+
+.contenedor {
     text-align: center;
+    width: 100%;
+    padding-top: 35px;
 }
 
 #Logo {
+    width: 200px;
     display: block;
-    margin-left: auto;
-    margin-right: auto; 
-    width: 250px; 
-}
-.boton{
-    display: flex;
-    justify-content: center; 
-    align-items: center;    
-    height: 25vh;   
-    flex-direction: column;   
- }
-
- .Is {
-    font-size: 1rem;
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    flex-direction: column;
-    background-color: peru;
-    border-radius: 8px;
-    width: 16rem;
-    height: 3rem;
-    margin-top: 1rem;
+    margin: 0 auto;
 }
 
+.titulo {
+    font-size: 4rem;
+    font-weight: 900;
+    color: #0E0E17;
+    margin-top: 10px;
+}
 
-.texto-recordatorio a,
-.dato-recordatorio a {
+.subtitulo {
+    font-size: 1.05rem;
+    font-weight: 500;
+    color: #0E0E17;
+    margin-top: 4px;
+}
+
+.boton-principal {
+    width: 360px;
+    height: 72px;
+    background: #D9D9D9;
+    border: none;
+    border-radius: 14px;
+    font-size: 1.55rem;
+    font-weight: 700;
     color: black;
-    text-decoration: none;
+    margin: 35px auto 0 auto;
+    display: block;
+    cursor: pointer;
+}
+
+.linea {
+    width: 82%;
+    height: 4px;
+    background: black;
+    margin: 50px auto 40px auto;
 }
