--- a/FrontEnd/pantalla de inicio/inicio.css
+++ b/FrontEnd/pantalla de inicio/inicio.css
@@ -1,10 +1,9 @@
-/* ====== ESTRUCTURA GENERAL ====== */
 html, body {
     height: auto;
     width: 100%;
     margin: 0;
     padding: 0;
-    overflow-x: hidden; /* sólo oculta el scroll horizontal */
+    overflow-x: hidden; 
     box-sizing: border-box;
 }
 
@@ -19,7 +18,6 @@ body {
     font-family: "Helvetica-Regular", Helvetica, sans-serif;
 }
 
-/* ====== LAYOUT PRINCIPAL ====== */
 .layout {
  display: flex;
     min-height: 100vh;
@@ -27,7 +25,6 @@ body {
 }
 
 
-/* SIDEBAR */
 .barra-lateral {
   width: 7rem;
   background-color: #333;
@@ -45,7 +42,6 @@ body {
   margin-top: auto
 }
 
-/* ====== CONTENIDO ====== */
 .contenido {
     flex: 1;
     display: flex;
@@ -57,18 +53,17 @@ body {
 }
 
 .contenedor {
-    width: 85%;              /* 🔥 mismo ancho que cajalarga */
-    margin: 0 auto;          /* centrar */
+    width: 85%;              
+    margin: 0 auto;          
     display: flex;
     justify-content: space-between;
     gap: 2rem;
     margin-bottom: 3rem;
 }
 
-/* ====== CAJAS ====== */
 .cajarecor {
-    flex: 1;                          /* 🔥 tres cajas iguales */
-    max-width: none;                  /* permite que crezcan para ocupar el ancho */
+    flex: 1;                         
+    max-width: none;                  
     background-color: rgba(217, 217, 217, 0.2);
     padding: 2rem 1.5rem;
     border-radius: 2rem;
@@ -86,7 +81,6 @@ body {
 }
 
 
-/* Título de caja */
 .cajarecor h2 {
     width: 100%;
     text-align: center;
@@ -95,7 +89,6 @@ body {
     letter-spacing: -0.05rem;
 }
 
-/* ====== ITEMS DE RECORDATORIOS ====== */
 .fila-recordatorio {
     width: 90%;
     min-height: 3rem;
@@ -109,7 +102,6 @@ body {
     backdrop-filter: blur(10px);
 }
 
-/* Botones internos */
 .texto-recordatorio,
 .dato-recordatorio {
     background: none;
@@ -119,21 +111,19 @@ body {
     color: #000;
 }
 
-/* Links adentro de los botones */
 .texto-recordatorio a,
 .dato-recordatorio a {
     color: #000;
     text-decoration: none;
 }
 
-/* ====== OBJETOS ====== */
 .Botoncitos {
   width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: center;   /* 🔥 CENTRA horizontalmente */
-    justify-content: center; /* (opcional) centra vertical */
+    align-items: center;   
+    justify-content: center; 
     max-width: 70%;
 }
 
@@ -164,7 +154,6 @@ body {
     text-decoration: none;
 }
 
-/* ====== TAREAS REALIZADAS ====== */
 .cajalarga {
     width: 85%;
     margin: 0 auto;
@@ -180,7 +169,7 @@ body {
         inset 0 -1px 33px rgba(0, 0, 0, 0.05),
         inset -1px 0 33px rgba(0, 0, 0, 0.04);
 
-    margin-top: auto;   /* 🔥 convierte a cajalarga en footer */
+    margin-top: auto;   
 }
 
 .cajalarga h2 {
@@ -189,7 +178,7 @@ body {
     font-size: 2.3rem;
 }
 
-/* Items tareas */
+
 .grupo-botones-tareas {
     display: flex;
     flex-wrap: wrap;
@@ -205,7 +194,6 @@ body {
     gap: 1rem;
 }
 
-/* Botones dentro */
 .texto-tarea,
 .circulo-mini {
     font-size: 1.3rem;
