--- a/FrontEnd/Recordatorios diarios/Diarios.css
+++ b/FrontEnd/Recordatorios diarios/Diarios.css
@@ -102,7 +102,8 @@ body {
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   z-index: 5000;
-
+  inset: 0; 
+  display: none; 
   align-items: center;
   justify-content: center;
 }
