--- a/FrontEnd/pantalla de inicio/inicio.css
+++ b/FrontEnd/pantalla de inicio/inicio.css
@@ -202,3 +202,20 @@ body {
     border: none;
     cursor: pointer;
 }
+
+
+a {
+    color: #000;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #000;
+}
+
+a:hover,
+a:active {
+    color: #000;
+    text-decoration: none;
+}
+
